--- a/documentation.html
+++ b/documentation.html
@@ -22,7 +22,7 @@
         <h1>DOCUMENTATION</h1>
         <div class="wrap">
             <img src="./img/doc1.png" width="80%" alt="Doc 1">
-            <img src="./img/doc2.jpg" width="50%" alt="Doc 2">
+            <img src="./img/doc2.png" width="50%" alt="Doc 2">
             <img src="./img/doc3.jpg" width="80%" alt="Doc 3">
         </div>
       </header>
